FIX: Magic line is jumping between items
Improved by removing margin and increasing padding instead.

--- a/styles/header.styl
+++ b/styles/header.styl
@@ -45,8 +45,8 @@ header
         display     flex
 
       li
-        padding     5rem 2rem
-        margin      0 2rem
+        padding     5rem 4rem
+        margin      0
         font-weight light
 
       .magic-line
